fixed weird scrollbar on right side of screen

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -1,6 +1,6 @@
 html, body {
   max-width: 1400px;
-  overflow-x: hidden;
+  // overflow-x: hidden;
   margin: auto;
   height: 100%;
 }
